k8-cluster/account-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-account-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account
  type: NodePort 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
