k8-cluster/bank-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-deployment
  labels:
    app: bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
      - name: bank
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-bank-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bank-service
spec:
  selector:
    app: bank
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
