k8-cluster/card-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: card-deployment
  labels:
    app: card
spec:
  replicas: 1
  selector:
    matchLabels:
      app: card
  template:
    metadata:
      labels:
        app: card
    spec:
      containers:
      - name: card
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-card-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: card-service
spec:
  selector:
    app: card
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
