k8-cluster/transaction-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  labels:
    app: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-transaction-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  selector:
    app: transaction
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
