k8-cluster/underwriter-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: underwriter-deployment
  labels:
    app: underwriter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: underwriter
  template:
    metadata:
      labels:
        app: underwriter
    spec:
      containers:
      - name: underwriter
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-underwriter-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: underwriter-service
spec:
  selector:
    app: underwriter
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
