k8-cluster/user-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: 239153380322.dkr.ecr.us-east-2.amazonaws.com/cc-user-microservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
